--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -44,9 +44,7 @@
             <h2>Mes Projets</h2>
             <div class="categories">
                <!-- CATEGORIE BOUTONS GENEREE EN JS-->
-               <div id="button">
-                  <button id="button_tous">Tous</button>
-               </div>
+               <div id="button"></div>
             </div>
 			<!--CONTENUE DE LA GALLERY CHARGÉ EN JS-->
             <div class="gallery"></div>
