--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -30,8 +30,8 @@
          </nav>
       </header>
       <!--FORMULAIRE DE CONNEXION-->
-      <main id="main-holder">
-         <h1 id="login-header">Log In</h1>
+      <main id="contact">
+         <h1 id="login">Log In</h1>
          <form id="login-form" action="#" method="post">
             <label id="error"> </label>
             <label for="email" class="titre">E-mail</label>
