--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,6 +10,7 @@
       <meta name="description" content="">
       <link rel="stylesheet" href="./assets/style.css">
       <script defer src="script.js"></script>
+      <script defer src="modal.js"></script>
    </head>
    <body>
       <!-- HEADER + NAV -->
@@ -21,8 +22,8 @@
             <ul>
                <li><a href="#portfolio_titre">projets</a></li>
                <li><a href="#contact">contact</a></li>
-               <li> <a href=login.html>Login</a></li>
-               <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+               <li> <a href=login.html>login</a></li>
+               <li><img id="logo_insta" src="./assets/icons/instagram.png" alt="Instagram"></li>
             </ul>
          </nav>
       </header>
@@ -44,7 +45,8 @@
             <h2>Mes Projets</h2>
             <div class="categories">
                <!-- CATEGORIE BOUTONS GENEREE EN JS-->
-               <div id="button"></div>
+               <div id="button">
+               </div>
             </div>
 			<!--CONTENUE DE LA GALLERY CHARGÉ EN JS-->
             <div class="gallery"></div>
