--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,7 +10,7 @@
       <meta name="description" content="">
       <link rel="stylesheet" href="./assets/style.css">
       <script defer src="script.js"></script>
-      <script defer src="modal.js"></script>
+      <script defer src="/FrontEnd/modal.js"></script>
    </head>
    <body>
       <!-- HEADER + NAV -->
@@ -20,9 +20,9 @@
          </a>
          <nav>
             <ul>
-               <li><a href="#portfolio_titre">projets</a></li>
-               <li><a href="#contact">contact</a></li>
-               <li> <a href=login.html>login</a></li>
+               <li>projets</li>
+               <li>contact</li>
+               <li> <a id="login" href="login.html">login</a></li>
                <li><img id="logo_insta" src="./assets/icons/instagram.png" alt="Instagram"></li>
             </ul>
          </nav>
@@ -44,6 +44,7 @@
          <section id="portfolio">
             <h2>Mes Projets</h2>
             <div class="categories">
+               <!-- faire une classe css hide pour masquer les categories/modal...etc en mode edition-->
                <!-- CATEGORIE BOUTONS GENEREE EN JS-->
                <div id="button">
                </div>
@@ -65,6 +66,18 @@
                <input type="submit" value="Envoyer">
             </form>
          </section>
+         <!-- MODAL -->
+         <!--a changer dans css (position css modal pop up)-->
+         <div class="modal" aria-hidden="true" role="dialog" >
+            <div class="modal-content">
+              <button class="modal-close"><i class="fa-solid fa-xmark"></i></button>
+              <h3 class="modal-title">Galerie photo</h3>
+              <div class="modal-body" id="modal-gallery"></div>
+              <button class="button-add-works">Ajouter une photo</button>
+              <a href="#" class="delete-works">Supprimer la galerie</a>
+            </div>
+          </div>
+          
       </main>
       <!-- FOOTER -->
       <footer>
