--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -103,7 +103,7 @@
             </section>
          </div>
       </aside>
-      <!--PAGE MODAL AJOUT PHOTO-->
+      <!--PAGE SUIVANTE DU MODAL -->
       <form name="form_ajout" method="post" action="#" id="addModal" class="modal" aria-hidden="true"
          style="display:none" enctype="multipart/form-data">
          <div class="modal_trigger"></div>
