--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -98,7 +98,7 @@
                <div id="modalGallery"></div>
                <div class="button">
                   <button id="buttonAddPhoto" class="buttonAddPhoto">Ajouter une photo</button>
-                  <button class="model_suprimer">Supprimer la galerie</button>
+                  <button class="deleteGaleryModal">Supprimer la galerie</button>
                </div>
             </section>
          </div>
@@ -113,7 +113,7 @@
             <section class="modalBody">
                <h2 class="modalTitle">Ajout photo</h2>
                <div id="model_gallery_ajout">
-                  <div class="addModal">
+                  <div class="addModalDownload">
                      <div id="photoAdd" style="display:none">
                         <div id="downloadImg"></div>
                      </div>
@@ -140,7 +140,7 @@
                   </div>
                </div>
                <div class="modal_ajout_valider">
-                  <button type="submit" id="btn_valider" class="model_ajoute valider">Valider</button>
+                  <button type="submit" id="btn_valider" class="addPhotoModal valider">Valider</button>
                </div>
             </section>
          </div>
