--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -28,19 +28,17 @@
 	</header>
 
 
-	<main id="main-holder">
-		<h1 id="login-header">Connexion</h1>
+	<main id="loginMain">
+		<h1 id="headerOfLogin">Connexion</h1>
 
-
-
-		<form id="login-form" action="#" method="post">
+		<form id="loginForm" action="#" method="post">
 			<label id="error"> </label>
-			<label for="email" class="titre">E-mail</label>
+			<label for="email" class="titleEmail">E-mail</label>
 			<input type="email" name="email" id="email" class="login " required>
-			<label for="password" class="titrep">Mot de passe</label>
+			<label for="password" class="passwordLogin">Mot de passe</label>
 			<input type="password" name="password" id="password" class="login " required>
-			<input type="submit" value="Se connecter" id="login-form-submit">
-			<a class="login-form-oublie" href="#">Mot de passe oublié</a>
+			<input type="submit" value="Se connecter" id="submitFormLogin">
+			<a class="passwordForget" href="#">Mot de passe oublié</a>
 		</form>
 
 	</main>
