--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -24,7 +24,7 @@
     <div id="banniere"></div>
     <!--HEADER +NAV -->
     <header>
-      <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+      <h1>Sophie Bluel <span>Architecte d'interieur</span></h1>
       <nav>
         <ul>
           <li><a href="#portfolio">projets</a></li>
@@ -98,24 +98,19 @@
         </ul>
       </nav>
     </footer>
-    <!--MODAL -->
-    <aside id="modal" class="modal" aria-hidden="true" style="display: none">
+
+     <!-- BASE DE LA MODALE -->
+     <aside id="modal" class="modal" aria-hidden="true" style="display: none">
       <div class="modalContainer js_modal_stop">
         <button id="buttonCloseModal">x</button>
+        <i id="left" class="fa-sharp fa-solid fa-arrow-left arrow-modal"></i>
         <section class="modalBody">
-          <i class="fa-solid fa-arrows-up-down-left-right"></i>
-          <h2 class="titleModalFirst">Galerie photo</h2>
-          <div id="modalGallery"></div>
-          <div class="button">
-            <button id="buttonAddPhoto" class="buttonAddPhoto">
-              Ajouter une photo
-            </button>
-            <button class="deleteGaleryModal">Supprimer la galerie</button>
-          </div>
+          <div class="modal-gallery-container"></div>
         </section>
       </div>
     </aside>
-    <!--PAGE SUIVANTE DU MODAL -->
+
+    <!--PAGE SUIVANTE DE LA MODALE -->
     <form
       name="form_ajout"
       method="post"
@@ -128,61 +123,12 @@
     >
       <div class="modalContainer js_modal_stop">
         <button id="btnCloseAddPhoto">x</button>
-        <i id="left" class="fa-sharp fa-solid fa-arrow-left"></i>
+        <i id="left" class="fa-sharp fa-solid fa-arrow-left add-modal"></i>
         <section class="modalBody">
-          <h2 class="modalTitle">Ajout photo</h2>
-          <div id="modalAddGallery">
-            <div class="addModalDownload">
-              <div id="photoAdd" style="display: none">
-                <div id="downloadImg"></div>
-              </div>
-
-              <div id="containerModal" style="display: contents">
-                <img
-                  class="photo"
-                  src="./assets/images/photo.PNG"
-                  alt="image"
-                />
-                <input
-                  name="image"
-                  type="file"
-                  id="addImg"
-                  accept="image/png , image/jpg  "
-                  class="buttonImgInput"
-                />
-                <button id="add" class="addPhotoModal">+ Ajouter photo</button>
-                <p>jpg, png : 4mo max</p>
-              </div>
-            </div>
-            <label id="messageError"></label>
-            <div class="inputTitleCategory">
-              <label>Titre</label>
-              <input name="title" id="titleModal" class="titleModal" required />
-              <span id="ErrorTitleSubmit" class="errormsg"></span>
-            </div>
-            <div class="inputTitleCategory">
-              <label>Catégorie</label>
-              <select
-                name="category"
-                id="categorie"
-                class="inputTitleCategoryChoice"
-              >
-                <span id="ErrorCategorySubmit" class="errormsg"></span>
-                <option value="Objets">Objets</option>
-                <option value="Appartements">Appartements</option>
-                <option value="Hotels & restaurants">
-                  Hotels & restaurants
-                </option>
-              </select>
-            </div>
-          </div>
-          <div class="buttonValidate">
-            <button type="submit" id="btnValider" class="addPhotoModal valider">
-              Valider
-            </button>
-          </div>
+          <div class="add-photo-modal"></div>
         </section>
       </div>
     </form>
+
   </body>
 </html>
