--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,8 +15,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
-    <script src="script.js" defer></script>
-    <script src="./modal.js" defer></script>
+    <script src="./assets/JS/script.js" defer></script>
+    <script src="./assets/JS/modal.js" defer></script>
     <meta name="description" content="" />
   </head>
   <body>
