--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,8 +15,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
-    <script src="./assets/JS/script.js" defer></script>
-    <script src="./assets/JS/modal.js" defer></script>
+    <script src="./script.js" defer></script>
+    <script src="./modal.js" defer></script>
     <meta name="description" content="" />
   </head>
   <body>
@@ -99,8 +99,8 @@
       </nav>
     </footer>
 
-    <!-- BASE DE LA MODALE -->
-    <aside id="modal" class="modal" aria-hidden="true" style="display: none">
+     <!-- BASE DE LA MODALE -->
+     <aside id="modal" class="modal" aria-hidden="true" style="display: none">
       <div class="modalContainer js_modal_stop">
         <button id="buttonCloseModal">x</button>
         <i id="left" class="fa-sharp fa-solid fa-arrow-left arrow-modal"></i>
@@ -109,5 +109,6 @@
         </section>
       </div>
     </aside>
-  </body>
+
+  <!-- </body> -->
 </html>
