--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -17,7 +17,7 @@
     ></script>
     <meta name="description" content="" />
     <link rel="stylesheet" href="./style.css" />
-    <script src="./assets/JS/login.js" defer></script>
+    <script src="./login.js" defer></script>
   </head>
 
   <body>
